# DesmosMIDI

./: .env.example  .gitignore  LICENSE  NOTICE  Quickstart.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  cli.md  desmos-playback.md  envelopes.md  midi-policy.md  releasing.md  report-schema.md  share.md  tempo-map.md  viz.md
src/desmosmidi/: __main__.py  app.py  app.tcss  cli.py  console.py  desmos_latex.py  diagnostics.py  env.py  envelopes.py  expr_bundle.py  fixtures_gen.py  midi_parse.py  models.py  notes.py  paths_util.py  piano_gate.py  pipeline.py  render_html.py  runner.py  tempo.py  tui_layout.py  viz_desmos.py  viz_export.py  voices.py
templates/: player-viz.js  player.html.j2
tests/: test_cli.py  test_core.py  test_viz_export.py
tests/fixtures/: make_midis.py
