[project]
name = "desmosmidi"
version = "0.1.0"
description = "MIDI to Desmos tone() graphs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "mido>=1.3.2",
  "jinja2>=3.1",
  "click>=8.1",
  "rich>=13.0",
  "textual>=0.80",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
desmosmidi = "desmosmidi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desmosmidi"]

[tool.hatch.build.targets.wheel.force-include]
"src/desmosmidi/app.tcss" = "desmosmidi/app.tcss"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
